package com.avi.billingservice.model.valueobjects;

public enum Category {
    GROCERIES, ELECTRONICS, OTHER
}
