package com.avi.billingservice.model.valueobjects;

public record Item(Category category, double price) {
}
