package com.avi.billingservice.model.valueobjects;

public enum UserType {
    EMPLOYEE, AFFILIATE, CUSTOMER
}
